@@ -1,3 +1,5 @@
+* Fix company amount and reconciled for statements with diferent currency.
+
 Version 3.4.0 - 2014-11-03
 
 Version 3.2.0 - 2014-05-22
